//file:noinspection GroovyUnusedCatchParameter


//import dev.ultreon.gameutils.ProjectType

import java.nio.file.Files
import java.nio.file.Paths

buildscript {
    repositories {
        mavenCentral()

        maven {
            url = "https://oss.sonatype.org/content/repositories/snapshots/"
            name = "sonatype"
        }

        maven {
            url = "https://maven.atlassian.com/3rdparty/"
        }

        gradlePluginPortal()

        google()
    }

    dependencies {
        classpath group: 'commons-io', name: 'commons-io', version: '2.13.0'
        classpath "com.google.code.gson:gson:2.10.1"
        classpath "org.jetbrains.kotlin.jvm:org.jetbrains.kotlin.jvm.gradle.plugin:1.9.22"
        classpath("gradle.plugin.org.jetbrains.gradle.plugin.idea-ext:gradle-idea-ext:1.1.8")
    }
}

//*****************//
//     Plugins     //
//*****************//
apply plugin: 'java'
apply plugin: 'groovy'
apply plugin: 'idea'
apply plugin: 'org.jetbrains.kotlin.jvm'
apply plugin: 'java'
apply plugin: 'java-library'
apply(plugin: "org.jetbrains.gradle.plugin.idea-ext")

//****************************//
// Setting up main properties //
//****************************//
//projectConfig {
//    type ProjectType.Desktop
//}

evaluationDependsOn(":gameprovider")
evaluationDependsOn(":server")
evaluationDependsOn(":mixinprovider")
evaluationDependsOn(":client")

java {
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
    maven {
        url = "https://maven.fabricmc.net"
        name = "FabricMC"
    }
    maven {
        url = "https://jitpack.io"
        name = "JitPack"
    }
}

dependencies {
    implementation api(project(":gameprovider"))
    implementation api(project(":client"))
    implementation api(project(":server"))

    implementation api("com.formdev:flatlaf:3.2.1")

    implementation api("com.badlogicgames.gdx:gdx:$gdxVersion")
    implementation api("com.badlogicgames.gdx:gdx-box2d:$gdxVersion")
    implementation api("com.badlogicgames.ashley:ashley:$ashleyVersion")
    implementation api("com.badlogicgames.gdx:gdx-ai:$aiVersion")
    implementation api("com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion")
    implementation api("com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion")

    implementation api("com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion") {
        exclude group: "org.lwjgl", module: "lwjgl"
        exclude group: "org.lwjgl", module: "lwjgl-glfw"
        exclude group: "org.lwjgl", module: "lwjgl-egl"
        exclude group: "org.lwjgl", module: "lwjgl-jemalloc"
        exclude group: "org.lwjgl", module: "lwjgl-openal"
        exclude group: "org.lwjgl", module: "lwjgl-opengl"
        exclude group: "org.lwjgl", module: "lwjgl-opengles"
        exclude group: "org.lwjgl", module: "lwjgl-stb"
    }
    implementation api("org.lwjgl:lwjgl:3.3.5!!") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-glfw:3.3.5!!") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-egl:3.3.5!!") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-jemalloc:3.3.5!!") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-openal:3.3.5!!") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-opengl:3.3.5!!") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-opengles:3.3.5!!") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-stb:3.3.5!!") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl:3.3.5!!:natives-linux") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-glfw:3.3.5!!:natives-linux") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-jemalloc:3.3.5!!:natives-linux") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-openal:3.3.5!!:natives-linux") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-opengl:3.3.5!!:natives-linux") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-stb:3.3.5!!:natives-linux") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl:3.3.5!!:natives-macos") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-glfw:3.3.5!!:natives-macos") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-jemalloc:3.3.5!!:natives-macos") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-openal:3.3.5!!:natives-macos") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-opengl:3.3.5!!:natives-macos") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-stb:3.3.5!!:natives-macos") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl:3.3.5!!:natives-windows") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-glfw:3.3.5!!:natives-windows") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-jemalloc:3.3.5!!:natives-windows") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-openal:3.3.5!!:natives-windows") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-opengl:3.3.5!!:natives-windows") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-opengles:3.3.5!!:natives-windows") { version { strictly "3.3.5" } }
    implementation api("org.lwjgl:lwjgl-stb:3.3.5!!:natives-windows") { version { strictly "3.3.5" } }
    implementation api("com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop")
    implementation api("com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop")
    implementation api("com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop")
    implementation api("com.badlogicgames.gdx-controllers:gdx-controllers-desktop:$gdxControllersVersion")
    implementation api("com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop")
    implementation api("com.badlogicgames.gdx-video:gdx-video-lwjgl3:$gdxVideoVersion") {
        exclude group: "org.lwjgl", module: "lwjgl"
        exclude group: "org.lwjgl", module: "lwjgl-glfw"
        exclude group: "org.lwjgl", module: "lwjgl-egl"
        exclude group: "org.lwjgl", module: "lwjgl-jemalloc"
        exclude group: "org.lwjgl", module: "lwjgl-openal"
        exclude group: "org.lwjgl", module: "lwjgl-opengl"
        exclude group: "org.lwjgl", module: "lwjgl-opengles"
        exclude group: "org.lwjgl", module: "lwjgl-stb"
    }

    // --- Win32 Libraries ---
    implementation api('com.github.Dgzt:gdx-lwjgl3-angle-vulkan:1.0.0') {
        exclude group: "org.lwjgl", module: "lwjgl-opengles"
    }

    // Others
    implementation api("com.github.crykn.guacamole:gdx-desktop:v0.3.5") {
        exclude group: "org.lwjgl", module: "lwjgl"
        exclude group: "org.lwjgl", module: "lwjgl-glfw"
        exclude group: "org.lwjgl", module: "lwjgl-egl"
        exclude group: "org.lwjgl", module: "lwjgl-jemalloc"
        exclude group: "org.lwjgl", module: "lwjgl-openal"
        exclude group: "org.lwjgl", module: "lwjgl-opengl"
        exclude group: "org.lwjgl", module: "lwjgl-opengles"
        exclude group: "org.lwjgl", module: "lwjgl-stb"
    }

    // Apache Log4J
    runtimeOnly("org.apache.logging.log4j:log4j:$log4jVersion")
    runtimeOnly("org.apache.logging.log4j:log4j-core:$log4jVersion")
    runtimeOnly("org.apache.logging.log4j:log4j-api:$log4jVersion")
    runtimeOnly("org.apache.logging.log4j:log4j-slf4j2-impl:$log4jVersion")
    implementation api("org.tukaani:xz:$tukaaniXzVersion")
    implementation api("org.bidib.org.oxbow:swingbits:$swingbitsVersion")

    implementation api("ca.weblite:java-objc-bridge:1.2")

    // SLF4J
    api "org.slf4j:slf4j-api:$slf4jVersion"

    // Misc
    implementation api("it.unimi.dsi:fastutil:8.5.13", { exclude group: "it.unimi.dsi", module: "fastutil-core" })
    implementation api("com.raylabz:opensimplex:1.0.3")

    implementation api("space.earlygrey:shapedrawer:$shapeDrawerVersion")

    // ImGui
    implementation api("io.github.spair:imgui-java-binding:$imGuiVersion")
    implementation api("io.github.spair:imgui-java-lwjgl3:$imGuiVersion")
    implementation api("io.github.spair:imgui-java-natives-linux:$imGuiVersion")
    implementation api("io.github.spair:imgui-java-natives-macos:$imGuiVersion")
    implementation api("io.github.spair:imgui-java-natives-windows:$imGuiVersion")

    implementation api("it.unimi.dsi:fastutil-core:8.5.13")
    implementation api("com.google.code.findbugs:jsr305:$jsrVersion")

    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"

    implementation api("org.xbib.elasticsearch:joptsimple:6.3.2.1")
    implementation api("org.apache.logging.log4j:log4j:$log4jVersion")
    implementation api("org.apache.logging.log4j:log4j-core:$log4jVersion")
    implementation api("org.apache.logging.log4j:log4j-api:$log4jVersion")

    // fabric-loader dependencies
    implementation api("org.ow2.asm:asm:${project.asmVersion}")
    implementation api("org.ow2.asm:asm-analysis:${project.asmVersion}")
    implementation api("org.ow2.asm:asm-commons:${project.asmVersion}")
    implementation api("org.ow2.asm:asm-tree:${project.asmVersion}")
    implementation api("org.ow2.asm:asm-util:${project.asmVersion}")

    implementation api("net.fabricmc:sponge-mixin:${project.mixinVersion}") {
        exclude module: 'launchwrapper'
        exclude module: 'guava'
    }

    //noinspection GradleDynamicVersion
    implementation api('net.fabricmc:tiny-mappings-parser:0.3.0+build.17')
    implementation api('net.fabricmc:tiny-remapper:0.8.7')
    //noinspection GradleDynamicVersion
    implementation api('net.fabricmc:dev-launch-injector:0.2.1+build.8')
    implementation api('net.fabricmc:access-widener:2.1.0')

    implementation api("dev.ultreon.quantum-fabric-loader:fabric-loader:$fabricVersion")

    //noinspection GradleDynamicVersion
    implementation api('net.fabricmc:tiny-mappings-parser:0.3.0+build.17')
    implementation api('net.fabricmc:tiny-remapper:0.8.7')
    //noinspection GradleDynamicVersion
    implementation api('net.fabricmc:dev-launch-injector:0.2.1+build.8')
    implementation api('net.fabricmc:access-widener:2.1.0')

    implementation api("dev.ultreon.quantum-fabric-loader:fabric-loader:$fabricVersion")
}

compileJava {
    dependsOn ":gameprovider:build"
    dependsOn ":client:build"
}

processResources {
    dependsOn ":gameprovider:build"
    dependsOn ":client:build"
    from(file("$rootProject.projectDir/LICENSE")) { into "META-INF/" }
    exclude "*.pdn", "*.xcf", "*.ps"

    duplicatesStrategy DuplicatesStrategy.INCLUDE
}

jar {
    dependsOn ":gameprovider:build"
    dependsOn ":client:build"
    //noinspection GroovyAssignabilityCheck
    manifest {
        //noinspection GroovyAssignabilityCheck
        attributes 'Implementation-Title': 'Quantum Voxel',
                'Implementation-Vendor': 'Ultreon Studios',
                project_version: project.projectVersion,
                'Main-Class': 'dev.ultreon.quantum.DesktopLauncher',
                'Multi-Release': 'true'
    }
}

tasks.register('prepareRun', {
    Files.createDirectories(Path.of(rootProject.projectDir.getAbsolutePath(), "run"))
})

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy DuplicatesStrategy.INCLUDE
}

tasks.withType(Jar).configureEach {
    duplicatesStrategy DuplicatesStrategy.INCLUDE
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}
